modifque el index

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
             </div>
             <div class="servicio_texto col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center">
-              <h3>Campañas Instagram</h3>
+              <h3>Campaña Instagram</h3>
               <img src="./img/insta.webp" class="img-fluid" width="180px" alt="face-logo">
               <p class="parrafo_service">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, veritatis.
               </p>
