--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Marketing Digital</title>
+  <title>Casino Online "Santiago Samuso"</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -26,23 +26,13 @@
     </div>
     <nav class="navbar  navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class=" navegacion_titulo navbar-brand" href="#">Marketing <span class="navegacion_span">Digital</span></a>
+        <a class=" navegacion_titulo navbar-brand text-center" href="#">Santiago - <span class="navegacion_span">Samus</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class=" collapse navbar-collapse " id="navbarNavDropdown">
           <ul class="navegacion_enlaces  navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./pages/galeria.html">Galeria</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./pages/precios.html">Precios</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./pages/contactos.html">Contacto</a>
-            </li>
-
           </ul>
         </div>
       </div>
@@ -50,9 +40,9 @@
     <div class="cabezera   ">
       <div class="img-cabezera">
         <div class="img-texto">
-          <p>Creciendo con vos</p>
-          <h1>Julian <span class="navegacion_span">Edifer</span></h1>
-          <p>Especialista en Marketing META</p>
+          <p>Seguridad 100%</p>
+          <h1>Casino<span class="navegacion_span">-Online</span></h1>
+          <p>Juga y Gana  4 plataformas</p>
 
         </div>
       </div>
@@ -61,32 +51,16 @@
   <main>
     <section>
       <div class=" servicios text-bg-dark py-3">
-        <h1>Nuestro Servicios</h1>
+        <h1>Mandanos un Mensaje</h1>
         <div class="grid py-3">
           <div class="row">
 
-            <div class=" servicio_texto col-xs-12  col-md-4 col-lg-4 col-xl-4 text-center">
-              <h3>Campañas Face</h3>
-              <img src="./img/face.webp" class="img-fluid" width="180px" alt="face-logo">
-              <p class="parrafo_service">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, veritatis.
+            <div class=" servicio_texto col-xs-12  col-md-12 col-lg-12 col-xl-12 text-center">
+              <h3>Pedi tu Usuario Gratis!!</h3>
+              <img src="./img/face.webp" class="img-fluid" width="350px" alt="face-logo">
+              <p class="parrafo_service">haciendo click en la imagen nos envias un mensaje directo
               </p>
-              <a  class="btn-info "href="./pages/cface.html">INFO</a>
-
-
-            </div>
-            <div class="servicio_texto col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center">
-              <h3>Campaña Instagram</h3>
-              <img src="./img/insta.webp" class="img-fluid" width="180px" alt="face-logo">
-              <p class="parrafo_service">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, veritatis.
-              </p>
-
-
-            </div>
-            <div class="servicio_texto  col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center">
-              <h3>Campañas Twitter</h3>
-              <img src="./img/tw.jpg" class="img-fluid" width="180px" alt="face-logo">
-              <p class="parrafo_service">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, veritatis.
-              </p>
+              
 
 
             </div>
@@ -105,36 +79,36 @@
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Porque Pagar Publicidad?
+                   Cuanto es minimo de carga  y min retiro?
                   </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                   <div class=" acordion accordion-body">
-                    Mejora la cantidad de ventas y clientes en un lapzo de tiempo mucho mas corto y hace creecer rapido a la empresa
+                    Minimo de carga es de 1000$ y el minimo de retiro es 3000$
                   </div>
                 </div>
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Porque Pagar Publicidad?
+                    Cronograma de pago?
                   </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                   <div class=" acordion accordion-body">
-                    Mejora la cantidad de ventas y clientes en un lapzo de tiempo mucho mas corto y hace creecer rapido a la empresa
+                    tenemos cronograma de pago pedilo mendiante mensajeria
                   </div>
                 </div>
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Porque Pagar Publicidad?
+                    Pque plaformas tenemos?
                   </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                   <div class=" acordion accordion-body">
-                    Mejora la cantidad de ventas y clientes en un lapzo de tiempo mucho mas corto y hace creecer rapido a la empresa
+                   TENEMOS FORTUBET -CASINO TIGERS - CASINO FENIX - 22CRUZADOS
                   </div>
                 </div>
               </div>
@@ -159,25 +133,19 @@
             </ul>
 
           </div>
-          <div class="footer_digital col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center">
-            <p>Creciendo con vos</p>
-            <h4>Marketing <span class="digital">Digital</span></h4>
+          <div class="footer_digital col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 text-center">
+            <p>jugando juntos</p>
+            <h4>Santaigo <span class="digital">Samus</span></h4>
 
           </div>
           <div class="footer col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center">
-            <h3>Menu</h3>
-            <ul class="footer_menu">
-              <li><a href="./pages/galeria.html" >Galeria</a></li>
-              <li><a href="./pages/precios.html" >Precios</a></li>
-              <li><a href="./pages/contactos.html" >Contacto</a></li>
-            </ul>
 
           </div>
         </div>
         
       </div>
       <div class="copy">
-        <p>Todos los derechos reservados Nicolas Urbanski</p>
+        <p>Todos los derechos reservados Santiago Samus</p>
       </div>
     </footer>
 
